[build-system]
requires = ["setuptools>=64.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "untdl-harvest"
description = "Python package for harvesting records from the UNT Digital Library via OAI."
readme = "README.md"
authors = [{ name = "Jason Thomale", email = "jason.thomale@unt.edu"}]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = [
    'pytest >= 6.2.4; python_version >= "3.10"',
    'pytest >= 3.0.0; python_version < "3.10"'
]
